2014-02-08  Niels Möller  <nisse@lysator.liu.se>

	* chacha-crypt.c (chacha_crypt): Fixed block counter update.

2014-02-07  Niels Möller  <nisse@lysator.liu.se>

	* nettle.texinfo (ASCII encoding): Document that
	base16_encode_update and base64_encode_update now uses dst_length
	as an output only.

	* testsuite/base64-test.c (test_main): Updated
	base64_decode_update test case.

	* sexp-transport.c (sexp_transport_iterator_first): For
	base64_decode_update, omit initialization of coded_length.
	* examples/base64dec.c (main): Likewise.
	* examples/base16dec.c (main): Likewise, for base16_decode_update.

	* base64-decode.c (base64_decode_update): Use *dst_length for
	output only. Don't require callers to pass a sane value.
	* base16-decode.c (base16_decode_update): Likewise.

2014-02-06  Niels Möller  <nisse@lysator.liu.se>

	* NEWS: List _set_key incompatibilities.

	* nettle-meta.h (_NETTLE_CIPHER_SEP, _NETTLE_CIPHER_SEP_SET_KEY)
	(_NETTLE_CIPHER_FIX, _NETTLE_CIPHER): Deleted unused macros.

	* nettle-internal.c (nettle_blowfish128): Deleted only use of
	_NETTLE_CIPHER.

	* blowfish.c (blowfish128_set_key): New function.
	* blowfish.h (BLOWFISH128_KEY_SIZE): New constant.

	* cast128-meta.c (nettle_cast128): Deleted only use of
	_NETTLE_CIPHER_FIX.

	* examples/nettle-benchmark.c (time_cipher): Fixed memset calls.

2014-01-30  Niels Möller  <nisse@lysator.liu.se>

	* Makefile.in (nettle_SOURCES): Arrange in alphabetic order.

	* nettle.texinfo: Updated, document size_t for length arguments.
	Document new AES and Camellia interfaces.

	* ecc-size.c (ecc_bit_size): New function.
	* ecc.h (ecc_bit_size): Declare it.

2014-01-29  Niels Möller  <nisse@lysator.liu.se>

	* nettle-types.h (typedef nettle_set_key_func): Deleted length
	argument.

	* arctwo.c (arctwo40_set_key, arctwo64_set_key)
	(arctwo128_set_key, arctwo128_set_key_gutmann): New functions.
	* arctwo.h: Declare them.
	* arctwo-meta.c (ARCTWO): New macro.